--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,18 +3,23 @@
 <head>
     <% include ../partials/head %>
 </head>
-<body class="container">
+
+<body>
 
 <header>
     <% include ../partials/header %>
 </header>
 
-<main>
+<main class="container-fluid">
     <div class="jumbotron">
-        <h1>This is great</h1>
-        <p>Welcome to templating using EJS</p>
+        <h1>Frank Amaral</h1>
+        <p>Web Developer and Designer</p>
     </div>
 </main>
+
+    <% include ../pages/about %>
+
+    <% include ../pages/contact%>
 
 <footer>
     <% include ../partials/footer %>
