Design Complete, Fixing API

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,24 +6,15 @@
 
 <body>
 
-<header>
-    <% include ../partials/header %>
-</header>
+<% include ../partials/header %>
 
-<main class="container-fluid">
-    <div class="jumbotron">
-        <h1>Frank Amaral</h1>
-        <p>Web Developer and Designer</p>
-    </div>
-</main>
+<% include ../pages/about %>
 
-    <% include ../pages/about %>
+<% include ../pages/skills %>
 
-    <% include ../pages/contact%>
+<% include ../pages/project %>
 
-<footer>
-    <% include ../partials/footer %>
-</footer>
+<% include ../partials/footer %>
 
 </body>
 </html>
