--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,24 @@
 <!--= Footer =-->
 
-<p class="text-center text-muted">© Copyright 2017 Frank Amaral</p>
+<footer id="contact" class="colour3">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 col-lg-offset-1 text-center">
+                <h4><strong>Frank Amaral</strong>
+                </h4>
+                <ul class="list-unstyled">
+                    <li><i class="fa fa-phone fa-fw"></i> (647) 262-8100</li>
+                    <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:frank.amaral97@gmail.com">frank.amaral97@gmail.com</a>
+                    </li>
+                </ul>
+                <hr class="small">
+                <p class="text-muted">Copyright &copy; Frank Amaral 2017</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!--= Scripts =-->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="/javascripts/navigation.js"></script>
