--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,14 +1,14 @@
 <!--= About =-->
 
-<section class="coloured-block colour1">
-    <div class="container-fluid">
+<section id="about" class="about blackText">
+    <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <h1 class="section-heading">About</h1>
-                <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid,
-                    suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo
-                    voluptatem quae delectus odit vel itaque amet.</p>
+            <div class="col-lg-12 text-center">
+                <h2>You seem interested? Well here you go!</h2>
+                <p class="lead">My name is Frank. I am currently studying "Interactive Web Development and Design"
+                    at
+                    Georgian College. I had started coding at the age of ten and still continuing at
+                    eight-teen. </p>
             </div>
         </div>
     </div>
