--- a/views/pages/skills.ejs
+++ b/views/pages/skills.ejs
@@ -1,6 +1,6 @@
 <!--= Skills =-->
-
-<section id="services skills" class="services colour2 whiteText">
+<div id="skills"></div>
+<section id="services" class="services colour2 whiteText">
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-10 col-lg-offset-1">
