--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,11 +1,14 @@
 <!--= Head =-->
 
-<meta charset="UTF-8">
-<title>Frank Amaral | Portfolio</title>
+<head>
 
-<!--= Stylesheets =-->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/stylesheets/style.css">
+    <meta charset="UTF-8">
+    <title>Frank Amaral | Portfolio</title>
+
+    <!--= Stylesheets =-->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
 
 
