--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
             <a href="/about" onclick=$("#menu-close").click();>About</a>
         </li>
         <li>
-            <a href="/projects" onclick=$("#menu-close").click();>Projects</a>
+            <a href="/project" onclick=$("#menu-close").click();>Projects</a>
         </li>
         <li>
             <a href="/services" onclick=$("#menu-close").click();>Services</a>
