--- a/views/pages/project.ejs
+++ b/views/pages/project.ejs
@@ -1,10 +1,13 @@
 <!--= Projects =-->
 
-<section id="portfolio" class="portfolio">
+<% include ../partials/head %>
+<% include ../partials/header %>
+
+<section id="portfolio" class="header portfolio">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1 text-center">
-                <h2>My Work</h2>
+                <h2 class="whiteText">Projects</h2>
                 <hr class="small">
                 <br>
                 <div class="row">
@@ -16,6 +19,7 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="col-md-6">
                         <div class="portfolio-item">
                             <a href="http://fdaconcrete.com/">
@@ -25,9 +29,51 @@
                             </a>
                         </div>
                     </div>
+
+                    <div class="col-md-6">
+                        <div class="portfolio-item">
+                            <a href="http://fdaconcrete.com/">
+                                <img class="img-portfolio img-responsive" src="/images/fdapat.jpg"
+                                     alt="FDA Pattern Concrete" title="FDA Pattern Concrete"
+                                     style="border: 0.5px solid black">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="portfolio-item">
+                            <a href="http://fdaconcrete.com/">
+                                <img class="img-portfolio img-responsive" src="/images/fdapat.jpg"
+                                     alt="FDA Pattern Concrete" title="FDA Pattern Concrete"
+                                     style="border: 0.5px solid black">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="portfolio-item">
+                            <a href="http://fdaconcrete.com/">
+                                <img class="img-portfolio img-responsive" src="/images/fdapat.jpg"
+                                     alt="FDA Pattern Concrete" title="FDA Pattern Concrete"
+                                     style="border: 0.5px solid black">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="portfolio-item">
+                            <a href="http://fdaconcrete.com/">
+                                <img class="img-portfolio img-responsive" src="/images/fdapat.jpg"
+                                     alt="FDA Pattern Concrete" title="FDA Pattern Concrete"
+                                     style="border: 0.5px solid black">
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
-    </div>
 </section>
+
+<% include ../partials/footer %>
