--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,52 +1,46 @@
 <!--= Contact =-->
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="well well-sm">
-                <form class="form-horizontal" method="post">
+<% include ../partials/head %>
+<% include ../partials/header %>
 
-                    <div class="form-group">
-                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                        <div class="col-md-8">
-                            <input id="fname" name="name" type="text" placeholder="First Name" class="form-control">
+
+<div class="header">
+    <div class="container">
+        <div class="row">
+            <form role="form" id="contact-form" class="contact-form">
+                <h2 class="whiteText text-center">Contact</h2>
+                <hr class="small">
+                <br>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="Name" autocomplete="off" id="Name"
+                                   placeholder="Name">
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                        <div class="col-md-8">
-                            <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input type="email" class="form-control" name="email" autocomplete="off" id="email"
+                                   placeholder="E-mail">
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <span class="col-md-1 col-md-offset-2 text-center"><i
-                                    class="fa fa-envelope-o bigicon"></i></span>
-                        <div class="col-md-8">
-                            <input id="email" name="email" type="text" placeholder="Email Address"
-                                   class="form-control">
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                        <textarea class="form-control textarea" rows="3" name="Message" id="Message"
+                                  placeholder="Message"></textarea>
                         </div>
                     </div>
-
-                    <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i
-                                        class="fa fa-pencil-square-o bigicon"></i></span>
-                        <div class="col-md-8">
-                                <textarea class="form-control" id="message" name="message"
-                                          placeholder="Enter your message here"
-                                          rows="7"></textarea>
-                        </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="submit" class="btn btn-dark btn-lg">Send message</button>
                     </div>
-
-                    <div class="form-group">
-                        <div class="col-md-12 text-center">
-                            <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                        </div>
-                    </div>
-
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
+
+<% include ../partials/footer %>
