--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,21 +1,28 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
 <% include ../partials/head %>
-
-<body>
 
 <% include ../partials/header %>
 
-<% include ../pages/about %>
+<header id="top" class="header">
+    <div class="text-vertical-center">
+        <h1>Frank Amaral</h1>
+        <h3>Web Developer & Designer <b>@Newmarket, ON</b></h3>
+        <br>
+        <a href="/about" class="btn btn-dark btn-lg">What about you Frank?</a>
+    </div>
+</header>
 
-<% include ../pages/skills %>
 
-<% include ../pages/project %>
+<!--= Welcome =-->
+
+<section id="about" class="about blackText">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Welcome User!</h2>
+                <p class="lead"> To get started on viewing my portfolio, please click on the hamburger menu on the top-right of the web page! </p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <% include ../partials/footer %>
-
-</body>
-
-</html>
