--- a/views/pages/skills.ejs
+++ b/views/pages/skills.ejs
@@ -1,10 +1,13 @@
+<% include ../partials/head %>
+<% include ../partials/header %>
+
 <!--= Skills =-->
 <div id="skills"></div>
-<section id="services" class="services colour2 whiteText">
+<section id="services" class="header services whiteText">
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-10 col-lg-offset-1">
-                <h2>My Skills</h2>
+                <h2>Skills</h2>
                 <hr class="small">
                 <div class="row">
 
@@ -60,7 +63,11 @@
                         </div>
                     </div>
 
+
                 </div>
             </div>
         </div>
+    </div>
 </section>
+
+<% include ../partials/footer %>
