--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -21,4 +21,9 @@
 <!--= Scripts =-->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="/javascripts/navigation.js"></script>
+<script src="/javascripts/navigation.js"></script> <!--= Navigation =-->
+<script src="/javascripts/contactform.js"></script> <!--= Contact Form =-->
+
+</body>
+
+</html>
