--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,7 @@
 <!--= Header =-->
 
+<body>
+
 <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
 <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
@@ -27,12 +29,3 @@
         </li>
     </ul>
 </nav>
-
-<header id="top" class="header">
-    <div class="text-vertical-center">
-        <h1>Frank Amaral</h1>
-        <h3>Web Developer & Designer <b>@Newmarket, ON</b></h3>
-        <br>
-        <a href="#about" class="btn btn-dark btn-lg">What about you Frank?</a>
-    </div>
-</header>
