--- a/views/pages/skills.ejs
+++ b/views/pages/skills.ejs
@@ -6,10 +6,10 @@
 <section id="services" class="header services whiteText">
     <div class="container">
         <div class="row text-center">
-            <div class="col-lg-10 col-lg-offset-1">
-                <h2>Skills</h2>
-                <hr class="small">
-                <div class="row">
+            <h2>Skills</h2>
+            <hr class="small">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
 
                     <div class="col-md-3 col-sm-6">
                         <div class="service-item">
@@ -63,6 +63,62 @@
                         </div>
                     </div>
 
+
+                </div>
+
+                <div class="row">
+
+                    <div class="col-md-3 col-sm-6">
+                        <div class="service-item">
+                                <span>
+                                    <img class="svg1" src="/images/people.svg" width="200px"
+                                         height="150"/>
+                            </span>
+                            <h4>
+                                <strong>Communication</strong>
+                            </h4>
+                            <p>Teamwork, Investigation</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-6">
+                        <div class="service-item">
+                                <span>
+                                    <img class="svg2" src="/images/interface.svg" width="200px"
+                                         height="150"/>
+                            </span>
+                            <h4>
+                                <strong>Development</strong>
+                            </h4>
+                            <p>HTML5, CSS3, PHP, Silex, Twig, Javascript, MySQL</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-6">
+                        <div class="service-item">
+                              <span>
+                                    <img class="svg3" src="/images/monitor.svg" width="200px"
+                                         height="150"/>
+                            </span>
+                            <h4>
+                                <strong>Design</strong>
+                            </h4>
+                            <p>Photoshop, Illustrator, C4D, Twitter Bootstrap</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-6">
+                        <div class="service-item">
+                               <span>
+                                    <img class="svg4" src="/images/sports.svg" width="200px"
+                                         height="150px"/>
+                            </span>
+                            <h4>
+                                <strong>Leadership</strong>
+                            </h4>
+                            <p>Group Leader, Helper</p>
+                        </div>
+                    </div>
 
                 </div>
             </div>
