--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -4,15 +4,21 @@
 <% include ../partials/header %>
 
 <section id="about" class="header whiteText">
-    <div class="text-vertical-center">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2>You seem interested? Well here you go!</h2>
-                <p class="lead">My name is Frank. I am currently studying "Interactive Web Development and Design"
-                    at
-                    Georgian College. I had started coding at the age of ten and still continuing at
-                    eight-teen. After graduating, I would like to focus on the back-end of Development but becoming a
-                    full-stack development would be pretty neat as well! </p>
+    <div class="col-lg-10 col-lg-offset-1 text-center">
+        <h2>About</h2>
+        <hr class="small">
+        <br>
+        <div class="text-vertical-center">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+
+                    <p class="lead">My name is Frank. I am currently studying "Interactive Web Development and Design"
+                        at
+                        Georgian College. I had started coding at the age of ten and still continuing at
+                        eight-teen. After graduating, I would like to focus on the back-end of Development but becoming
+                        a
+                        full-stack development would be pretty neat as well! </p>
+                </div>
             </div>
         </div>
     </div>
